...
    <string name="sport_level_climbing">Climbing level</string>
    <string name="sport_level_biking">Biking level</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="show_completed_activities_description">Enabling this option will only display activities with known position</string>
    <string name="erase_options">Clear all</string>
    <string name="ride">Ride</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="add_review">Review:</string>
    <string name="ask_rating">Please rate (out of 5 stars): </string>
...
